- the large widget got retired (merged with classic widget)
- added dynamic widget preview layouts and new widget descriptions
- modified the permitted widget sizes on api >=31 to improve the appearance
- widgets now better display on launchers allowing display rotation
- renamed the widgets to better reflect their information
- fixed date & time not updated correctly at various places inside the app when the locale changed while the app was running
- removed the data update logic based on AlarmManager and JobWorker using a foreground service for updates
- implemented new update logic based on sync adapter
- new necessary permissions to manage the sync adapter: AUTHENTICATE_ACCOUNTS, WRITE_SYNC_SETTINGS, READ_SYNC_SETTINGS
- syncs in the background won't waste battery when no suitable network is available or when the device is idle
- syncs won't occur when the user disables background syncs
- added setting to warn about disabled sync, pressing it allows to enable sync from inside the app
- to better adapt to other apps and their data sync, the sync intervals are now inexact
- the user can now decide in detail which data should be synced in the background
- the settings for syncs are now unified in a new category called "sync settings"
- the user-triggered updates now only reload the data necessary for the view visible
- added dialog to ask if the favorites should be really deleted
- added button in welcome activity to optionally opt out from battery saving
- added setting to optionally opt out from battery saving
- the travel update now also does a force update for weather forecasts, weather warnings, texts, pollen count and maps
- add buttons to logging activity to scroll to the top & bottom of the text
- rewritten update logic for Gadgetbridge based on AlarmManager/JobWorker and widgets
- regular Gadgetbridge updates are now performed independently of data syncs, at least every 60 minutes