@@ -40,7 +40,7 @@
               android:textColor="@color/colorTextWidget"
               android:textSize="@dimen/widget_textsize_small"
               android:visibility="visible"
-              android:text="@string/dwd_notice"/>
+              android:text="@string/dwd_notice_app"/>
 
     <TextView android:id="@+id/classicwidget_weatherconditiontext"
               android:textSize="@dimen/widget_textsize_small"
