@@ -29,18 +29,18 @@
                android:layout_height="match_parent"/>
 
     <TextView android:id="@+id/widget_reference_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:textColor="@color/colorTextWidget"
-        android:textSize="@dimen/widget_textsize_small"
-        android:visibility="visible"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:text="@string/dwd_notice"/>
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_alignParentBottom="true"
+              android:textColor="@color/colorTextWidget"
+              android:textSize="@dimen/widget_textsize_small"
+              android:visibility="visible"
+              android:gravity="center"
+              android:layout_gravity="center"
+              android:textAlignment="center"
+              android:layout_marginLeft="8dp"
+              android:layout_marginRight="8dp"
+              android:text="@string/dwd_notice_app"/>
 
     <ImageView android:id="@+id/widget_warningsymbol"
                android:layout_marginTop="2dp"
