@@ -39,7 +39,7 @@
         android:textSize="@dimen/widget_textsize_small"
         android:visibility="visible"
         android:gravity="center"
-        android:text="@string/dwd_notice"/>
+        android:text="@string/dwd_notice_app"/>
 
     <ImageView android:id="@+id/widget_warningsymbol"
                android:layout_marginTop="2dp"
