@@ -624,7 +624,7 @@
                   android:textSize="@dimen/widget_textsize_small"
                   android:visibility="visible"
                   android:gravity="center"
-                  android:text="@string/dwd_notice"/>
+                  android:text="@string/dwd_notice_app"/>
 
 
     </LinearLayout>
